# algobattle-web

./: .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  backup.sh  common.yml  config_template.toml  docker-compose.dev.yml  docker-compose.yml  nginx.conf  pyproject.toml  pyrightconfig.json
.github/workflows/: python-app.yml
alembic/versions/: 652e03a44d20_add_user_settings.py  9ca7b9f247bc_make_uuid4_default_for_the_users_table.py  bdff60268a39_add_is_admin_to_users.py
algobattle-web/: main.py
algobattle_web/: __init__.py  api.py  app.py  base_classes.py  battle.py  config.py  database.py  dependencies.py  home.py  homepage.py  login.py  models.py  pages.py  secrets.py  util.py
algobattle_web/models/: team.py  user.py
algobattle_web/routers/: admin.py  api.py  home.py  login.py  user.py  user_pages.py
algobattle_web/routers/admin/: __init__.py  teams.py  users.py
algobattle_web/static/scripts/: admin_configs.js  admin_contexts.js  admin_problems.js  admin_teams.js  admin_users.js  base.js  documentation.js  problem_create.js  problem_detail.js  problems.js  programs.js  results.js  schedule.js  styles.css  user.js
algobattle_web/static/styles/: problem_create.css
algobattle_web/templates/: __init__.py  admin_configs.jinja  admin_contexts.jinja  admin_problems.jinja  admin_teams.jinja  admin_users.jinja  base.jinja  documentation.jinja  home.jinja  login.jinja  login_email_sent.jinja  problem_create.jinja  problem_detail.jinja  problems.jinja  programs.jinja  results.jinja  schedule.jinja  sidebar.jinja  team.jinja  user.jinja
algobattleweb/: __init__.py  login.py  main.py
algobattleweb/templates/: __init__.py  login.jinja  login_email_sent.jinja
backend/: .flake8  .gitignore  Dockerfile  Dockerfile.dev  pyproject.toml
backend/alembic/: alembic.ini
backend/algobattle_web/: api.py  app.py  battle.py  config.py  dependencies.py  models.py  pages.py  schemas.py  util.py
backend/algobattle_web/alembic/: alembic.ini  env.py
backend/algobattle_web/alembic/versions/: 01_home.py  02_upload_limit.py  03_points.py  1791b4c03b50_upoad_limit.py  3b93f9da7151_add_user_tournament_select.py  5602c700dd37_.py  5c12167db83e_init.py  6aee42c9b57d_home.py  9ce0127fdc78_.py
backend/algobattle_web/static/scripts/: admin_contexts.js  admin_teams.js  base.js  documentation.js  problem_create.js  problem_detail.js  programs.js  schedule.js
backend/algobattle_web/templates/: __init__.py  admin_users.jinja  base.jinja  home.jinja  login.jinja  problem_create.jinja  problems.jinja  programs.jinja  results.jinja
frontend/: .gitignore  Dockerfile  Dockerfile.dev  config.yaml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  shared.ts  types.ts
frontend/src/assets/: base.css  styles.scss
frontend/src/components/: DateTime.vue  DeleteButton.vue  DownloadButton.vue  FileEditRow.vue  FileInput.vue  HomeNavbarIcon.vue  HoverBadge.vue  LoginPane.vue  PageNavbarIcon.vue  Paginator.vue  ProblemCard.vue  ResultChart.vue
frontend/src/router/: index.ts
frontend/src/views/: AdminContexts.vue  AdminPanel.vue  AdminSettings.vue  AdminTeams.vue  AdminTournaments.vue  AdminUsers.vue  HomeDefault.vue  HomeView.vue  LoginView.vue  NotFound.vue  ProblemCreate.vue  ProblemDetail.vue  ProblemView.vue  Programs.vue  Results.vue  Schedule.vue  Settings.vue
