[project]
name = "algobattle-web"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Imogen Hergeth"}, {name = "Henri Lotze"}]
urls = {github = "https://github.com/Benezivas/algobattle-web"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
dependencies = [
    "algobattle",
    "fastapi",
]
