[project]
name = "algobattle_web"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Imogen Hergeth"}, {name = "Henri Lotze"}]
urls = {github = "https://github.com/Benezivas/algobattle-web"}
classifiers = [
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
dependencies = [
    "algobattle",
    # I think this is a windows only issue
    # what we want is python-magic-bin 0.4.14 but something installs
    # python-magic >= 0.4.15 so that gets found rather than the good version
    # it seems to work to just force the bad one to 0.4.13 like this and ignore it
    "python-magic == 0.4.13",
    "uvicorn",
    "fastapi",
    "jinja2",
    "python-jose[cryptography]",
    "python-multipart",
    "sqlalchemy >= 2.0.0b1",
    "pydantic",
    "markdown",
]

[project.scripts]
algobattle_web = "algobattle_web.app:main"

[tool.pyright]
diagnosticMode = "workspace"
exclude = ["db_files/**"]

[tool.setuptools]
packages = ["algobattle_web"]
