[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "algobattle_web"
version = "0.17.4"
requires-python = "~=3.11"
license = {text = "MIT"}
authors = [{name = "Imogen Hergeth"}, {name = "Henri Lotze"}]
urls = {github = "https://github.com/Benezivas/algobattle-web"}
classifiers = [
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
dependencies = [
    "algobattle-base~=4.3.0",
    "uvicorn~=0.25.0",
    "fastapi~=0.108.0",
    "python-jose[cryptography]~=3.3.0",
    "python-multipart~=0.0.6",
    "sqlalchemy~=2.0.25",
    "pydantic~=2.5.3",
    "pydantic-extra-types~=2.4.0",
    "markdown~=3.5.2",
    "mysqlclient~=2.2.1",
    "sqlalchemy-utils~=0.41.1",
    "alembic~=1.13.1",
]

[project.optional-dependencies]
dev = [
    "watchfiles~=0.21.0",
]

[project.scripts]
algobattle_api = "algobattle_web.app:create_openapi"
algobattle_runner = "algobattle_web.battle:main"

[tool.setuptools]
packages = ["algobattle_web", "algobattle_web.alembic"]

[tool.setuptools.package-data]
"algobattle_web.alembic" = ["*"]
